--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -11,7 +11,7 @@
     "@angular/platform-browser-dynamic": "14.2.10",
     "@angular/router": "14.2.10",
     "autolinker": "4.0.0",
-    "openvidu-browser": "2.28.0",
+    "openvidu-browser": "2.29.0-beta1",
     "rxjs": "7.5.7",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
@@ -77,5 +77,5 @@
     "webcomponent:e2e-pro-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e-pro",
     "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/ && echo http://localhost:8080/?OV_URL=https://localhost:4443&OV_SECRET=MY_SECRET&prejoin=false"
   },
-  "version": "2.28.1"
+  "version": "2.29.0-beta1"
 }
