--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -12,7 +12,7 @@
     "@angular/material": "^14.0.0",
     "autolinker": "^4.0.0",
     "buffer": "^6.0.3",
-    "openvidu-browser": "2.28.0"
+    "openvidu-browser": "2.29.0-beta1"
   },
-  "version": "2.28.1"
+  "version": "2.29.0-beta1"
 }
