openvidu-browser: update dependencies

--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -1,31 +1,22 @@
 {
     "author": "OpenVidu",
     "dependencies": {
+        "events": "3.3.0",
         "freeice": "2.2.2",
         "hark": "1.2.3",
+        "inherits": "2.0.4",
         "jsnlog": "2.30.0",
         "mime": "3.0.0",
         "platform": "1.3.6",
-        "semver": "7.3.8",
-        "uuid": "9.0.0",
-        "wolfy87-eventemitter": "5.2.9",
-        "events": "3.3.0",
-        "inherits": "2.0.4"
+        "semver": "7.6.2",
+        "uuid": "9.0.1",
+        "wolfy87-eventemitter": "5.2.9"
     },
     "description": "OpenVidu Browser",
     "devDependencies": {
         "@types/node": "18.11.9",
         "@types/platform": "1.3.4",
         "browserify": "17.0.0",
-        "grunt": "1.5.3",
-        "grunt-cli": "1.4.3",
-        "grunt-contrib-copy": "1.0.0",
-        "grunt-contrib-sass": "2.0.0",
-        "grunt-contrib-uglify": "5.2.2",
-        "grunt-contrib-watch": "1.1.0",
-        "grunt-postcss": "0.9.0",
-        "grunt-string-replace": "1.3.3",
-        "grunt-ts": "6.0.0-beta.22",
         "terser": "5.15.1",
         "tsify": "5.0.4",
         "tslint": "6.1.3",
