--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -4,12 +4,12 @@
   },
   "name": "openvidu-angular",
   "peerDependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/core": "^16.0.0",
+    "@angular/animations": "^16.0.0 || ^17.0.0",
+    "@angular/common": "^16.0.0 || ^17.0.0",
+    "@angular/core": "^16.0.0 || ^17.0.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
+    "@angular/forms": "^16.0.0 || ^17.0.0",
+    "@angular/material": "^16.0.0 || ^17.0.0",
     "autolinker": "^4.0.0",
     "buffer": "^6.0.3",
     "openvidu-browser": "2.29.1"
