--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -1,27 +1,27 @@
 {
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.14",
-    "@angular/common": "16.2.12",
-    "@angular/core": "16.2.12",
+    "@angular/animations": "17.3.10",
+    "@angular/cdk": "17.3.10",
+    "@angular/common": "17.3.10",
+    "@angular/core": "17.3.10",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "16.2.12",
-    "@angular/material": "16.2.14",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/forms": "17.3.10",
+    "@angular/material": "17.3.10",
+    "@angular/platform-browser": "17.3.10",
+    "@angular/platform-browser-dynamic": "17.3.10",
+    "@angular/router": "17.3.10",
     "autolinker": "4.0.0",
     "openvidu-browser": "2.29.1",
     "rxjs": "7.5.7",
     "tslib": "2.3.1",
-    "zone.js": "0.13.3"
+    "zone.js": "^0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.14",
-    "@angular/cli": "16.2.14",
-    "@angular/compiler": "16.2.12",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/elements": "16.2.12",
+    "@angular-devkit/build-angular": "17.3.8",
+    "@angular/cli": "17.3.8",
+    "@angular/compiler": "17.3.10",
+    "@angular/compiler-cli": "17.3.10",
+    "@angular/elements": "17.3.10",
     "@compodoc/compodoc": "^1.1.19",
     "@types/chai": "4.3.0",
     "@types/mocha": "9.1.0",
@@ -46,11 +46,11 @@
     "karma-mocha-reporter": "2.2.5",
     "karma-notify-reporter": "1.3.0",
     "mocha": "9.2.2",
-    "ng-packagr": "16.2.3",
+    "ng-packagr": "17.3.0",
     "selenium-webdriver": "4.5.0",
     "ts-node": "10.4.0",
     "tslint": "6.1.3",
-    "typescript": "4.9.3",
+    "typescript": "^5.4.5",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "name": "openvidu-components-testapp",
