--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "name": "openvidu-angular",
+  "name": "openvidu-angular-v2compatibility",
   "peerDependencies": {
     "@angular/animations": "^16.0.0 || ^17.0.0",
     "@angular/common": "^16.0.0 || ^17.0.0",
@@ -12,7 +12,7 @@
     "@angular/material": "^16.0.0 || ^17.0.0",
     "autolinker": "^4.0.0",
     "buffer": "^6.0.3",
-    "openvidu-browser": "2.30.0"
+    "openvidu-browser-v2compatibility": "3.0.0-beta1"
   },
-  "version": "2.30.0"
+  "version": "3.0.0-beta1"
 }
