--- a/openvidu-node-client/config/tsconfig.json
+++ b/openvidu-node-client/config/tsconfig.json
@@ -2,7 +2,7 @@
     "include": ["../src"],
     "exclude": ["../config", "../docs", "../lib", "../node_modules"],
     "typedocOptions": {
-        "name": "OpenVidu Node Client",
+        "name": "OpenVidu Node Client V2 Compatibility",
         "entryPoints": ["../src/index.ts"],
         "out": "../docs",
         "theme": "default",
