ov-components: Bump to 3.0.0-dev5

--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -78,5 +78,5 @@
     "webcomponent:e2e-pro-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e-pro",
     "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/ && echo http://localhost:8080/?OV_URL=https://localhost:4443&OV_SECRET=MY_SECRET&prejoin=false"
   },
-  "version": "3.0.0-beta1"
+  "version": "3.0.0-dev5"
 }
