--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -24,5 +24,5 @@
         "docs": "./generate-docs.sh"
     },
     "typings": "lib/index.d.ts",
-    "version": "3.0.0-beta1"
+    "version": "3.0.0-dev5"
 }
