--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -31,7 +31,7 @@
     "@types/selenium-webdriver": "4.1.16",
     "@types/ws": "^8.5.4",
     "chai": "4.3.6",
-    "chromedriver": "116.0.0",
+    "chromedriver": "126.0.5",
     "codelyzer": "6.0.2",
     "concat": "^1.0.3",
     "cross-env": "^7.0.3",
@@ -55,7 +55,7 @@
     "ng-packagr": "18.0.0",
     "npm-watch": "^0.11.0",
     "prettier": "3.0.3",
-    "selenium-webdriver": "4.12.0",
+    "selenium-webdriver": "4.23.0",
     "ts-node": "10.4.0",
     "tslint": "6.1.3",
     "typescript": "5.4.5",
@@ -83,8 +83,9 @@
     "doc:clean-copy": "rm -rf ../../openvidu-docs/docs/docs/reference-docs/openvidu-components-angular && cp -r ./docs/openvidu-components-angular/ ../../openvidu-docs/docs/docs/reference-docs/openvidu-components-angular",
     "doc:serve": "npx compodoc -c ../openvidu-components-angular/projects/openvidu-components-angular/doc/.compodocrc.json --serve --port 7000",
     "doc:serve-watch": "npm-watch doc:serve",
-    "lib:build": "ng build openvidu-components-angular --configuration production && cd ./dist/openvidu-components-angular",
-    "lib:copy": "cp dist/openvidu-components-angular/openvidu-components-angular-*.tgz ../../openvidu-call-livekit/openvidu-call-front",
+    "lib:build": "ng build openvidu-components-angular --configuration development && cd ./dist/openvidu-components-angular",
+    "lib:pack": "cd ./dist/openvidu-components-angular && npm pack",
+    "lib:copy": "cp dist/openvidu-components-angular/openvidu-components-angular-*.tgz ../../openvidu-call/openvidu-call-front",
     "lib:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/angular.test.js",
     "lib:e2e-ci": "cross-env LAUNCH_MODE=CI npm run lib:e2e",
     "lib:serve": "ng build openvidu-components-angular --watch",
@@ -100,5 +101,5 @@
     "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/ && echo http://localhost:8080/?OV_URL=https://localhost:4443&OV_SECRET=MY_SECRET&prejoin=false",
     "simulate:multiparty": "livekit-cli load-test --url ws://localhost:7880 --api-key devkey --api-secret secret --room daily-call --publishers 8 --audio-publishers 8 --identity-prefix Participant --identity publisher"
   },
-  "version": "3.0.0-beta2"
+  "version": "3.0.0-beta3-dev"
 }
