--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -65,8 +65,13 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-local-deployment
           cd openvidu-local-deployment/community
           ./configure_lan_private_ip_linux.sh
-          docker compose up
-
+          docker compose up -d
+      - name: Wait for openvidu-local-deployment
+        run: |
+          until curl -s -f -o /dev/null http://localhost:7880; do
+            echo "Waiting for openvidu-local-deployment to be ready..."
+            sleep 5
+          done
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -77,6 +82,12 @@ jobs:
         run: npm run build --prefix openvidu-components-angular
       - name: Serve openvidu-components-angular Testapp
         run: npm run start-prod --prefix openvidu-components-angular &
+      - name: Wait for openvidu-components-angular Testapp
+        run: |
+          until curl -s -f -o /dev/null http://localhost:4200; do
+            echo "Waiting for openvidu-components-angular Testapp to be ready..."
+            sleep 5
+          done
       - name: Run openvidu-components-angular E2E
         run: npm run lib:e2e-ci --prefix openvidu-components-angular
 
