--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -95,7 +95,16 @@
     "e2e:nested-all-ci": "cross-env LAUNCH_MODE=CI npm run e2e:nested-all",
     "e2e:nested-events-ci": "cross-env LAUNCH_MODE=CI npm run e2e:nested-events",
     "e2e:nested-directives-ci": "cross-env LAUNCH_MODE=CI npm run e2e:nested-directives",
-
+    "e2e:webcomponent-all": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/**/*.test.js",
+    "e2e:webcomponent-directives": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/api-directives.test.js",
+    "e2e:webcomponent-captions": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/captions.test.js",
+    "e2e:webcomponent-chat": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/chat.test.js",
+    "e2e:webcomponent-events": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/events.test.js",
+    "e2e:webcomponent-media-devices": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/media-devices.test.js",
+    "e2e:webcomponent-panels": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/panels.test.js",
+    "e2e:webcomponent-screensharing": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/screensharing.test.js",
+    "e2e:webcomponent-stream": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/stream.test.js",
+    "e2e:webcomponent-toolbar": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/toolbar.test.js",
 
     "lint": "ng lint",
     "start": "ng serve --configuration development --open",
@@ -103,7 +112,6 @@
     "start:ssl": "ng serve --ssl --configuration development --host 0.0.0.0 --port 5080",
     "webcomponent:testing-build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration testing && node ./openvidu-webcomponent-build.js",
     "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js",
-    "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent-e2e/**/*.test.js",
     "webcomponent:e2e-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e",
     "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/",
     "simulate:multiparty": "livekit-cli load-test --url ws://localhost:7880 --api-key devkey --api-secret secret --room daily-call --publishers 8 --audio-publishers 8 --identity-prefix Participant --identity publisher"
